@@ -333,5 +333,35 @@ module Druid
     def h4_element identifier
       h4_for identifier
     end
+
+    #
+    # Finds a h5
+    #
+    # @param [Hash] identifier how we find a h5. You can use a multiple parameters
+    #  by combining of any of the following except xpath. The valid keys are:
+    #   * :class
+    #   * :id
+    #   * :index
+    #   * :xpath
+    #   * :name
+    #
+    def h5_element identifier
+      h5_for identifier
+    end
+
+    #
+    # Finds a h6
+    #
+    # @param [Hash] identifier how we find a h6. You can use a multiple parameters
+    #  by combining of any of the following except xpath. The valid keys are:
+    #   * :class
+    #   * :id
+    #   * :index
+    #   * :xpath
+    #   * :name
+    #
+    def h6_element identifier
+      h6_for identifier
+    end
   end
 end
